# Diagrams

./: .gitignore  LICENSE  README.md
.github/workflows/: python-package.yml
diagrams_dscr/: README.md  pyproject.toml
diagrams_dscr/src/diagrams_dscr/: __about__.py  __init__.py  describe.py  dot_describe.py
diagrams_dscr/tests/: AS17_1prom.py  test_describe.py  test_diagrams.py  test_dot_describe.py  test_pydot.py
