[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diagrams-dscr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "denirz", email = "denirz@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "diagrams",
  "pandas",
  "pydot",
  "numpy"
]



[project.urls]
Documentation = "https://github.com/denirz/diagrams-dscr#readme"
Issues = "https://github.com/denirz/diagrams-dscr/issues"
Source = "https://github.com/denirz/diagrams-dscr"

[tool.hatch.version]
path = "src/diagrams_dscr/__about__.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
include = ["src/diagrams_dscr/*.py",
"README.md",
"LICENSE.txt",
]

[tool.hatch.build.targets.wheel.sources]
"src/diagrams_dscr" = "diagrams_dscr"

[tool.hatch.build.targets.sdists.sources]
"*" = "diagrams_dscr/*"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/diagrams_dscr tests}"

[tool.hatch.envs.test]
dependencies = [
  "pytest"
]

[tool.coverage.run]
source_pkgs = ["diagrams_dscr", "tests"]
branch = true
parallel = true
omit = [
  "src/diagrams_dscr/__about__.py",
]

[tool.coverage.paths]
diagrams_dscr = ["src/diagrams_dscr", "*/diagrams-dscr/src/diagrams_dscr"]
tests = ["tests", "*/diagrams-dscr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
